[package]
name = "redis_vpn_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.23", features = ["streams"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.11"